Further 1.21 porting: it launches?
Currently not yet implemented: rewrite DataStorage and ChestData and
friends to not completely suck.